<?xml version="1.0" encoding="utf-8"?>
<!-- 2015-03-01 K.OHWADA -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item 
        android:id="@+id/bt_menu_connect_secure"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/bt_menu_connect_secure"
        android:showAsAction="ifRoom|withText" />

    <item 
        android:id="@+id/bt_menu_disconnect"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/bt_menu_disconnect"
        android:showAsAction="ifRoom|withText" />

    <item 
        android:id="@+id/bt_menu_clear"
        android:title="@string/bt_menu_clear"         
        android:showAsAction="never" />

    <item 
        android:id="@+id/bt_menu_settings"
        android:title="@string/bt_menu_settings"
        android:showAsAction="never" />
                  
</menu>
