<?xml version="1.0" encoding="utf-8"?>
<!-- 2015-03-01 K.OHWADA -->

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="4dp" >
    
    <TextView 
        android:id="@+id/bt_TextView_list_title_paired_devices"
        android:text="@string/bt_list_title_paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp" />
 
    <ListView 
        android:id="@+id/bt_ListView_list_paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView 
        android:id="@+id/bt_TextView_list_title_new_devices"
        android:text="@string/bt_list_title_other_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp" />

    <ListView 
        android:id="@+id/bt_ListView_list_new_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <Button 
        android:id="@+id/bt_Button_list_scan"
        android:text="@string/bt_list_button_scan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>